# AniMAIRE-public

./: AGENTS.md  CITATION.cff  PERFORMANCE_ANALYSIS.md  README.md  VERBOSITY_GUIDE.md  extract_monitor_sets.py  fix_gle_spectra.py  interpolate_cambourne.py  interpolate_lerwick.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/scripts/: sync_citation_cff.py
.github/workflows/: bump-version-on-dependabot-merge.yml  python-package.yml  python-publish.yml  sync-citation-cff.yml
AniMAIRE/: AniMAIRE.py  AniMAIRE_event.py  AniMAIRE_ui.py  DoseRateFrame.py  MAIREPLUS_event.py  MAIREPLUS_spectrum.py  dose_plotting.py  utils.py
AniMAIRE/anisotropic_MAIRE_engine/: AsymptoticDirectionProcessing.py  generalEngineInstance.py  otso_cone_processing.py  otso_planet_processing.py  singleParticleEngineInstance.py
AniMAIRE/anisotropic_MAIRE_engine/data/: NM64_responses.py
AniMAIRE/anisotropic_MAIRE_engine/rigidityPredictor/: rigidity_predictor.py
AniMAIRE/anisotropic_MAIRE_engine/spectralCalculations/: pitchAngleDistribution.py  rigiditySpectrum.py
AniMAIRE/events/: AnisotropicMAIREPLUSevent.py
AniMAIRE/maire_plus_tools/: __init__.py  calculate_MAIREPLUS_spectral_index.py  neutron_monitor.py  test_calculate_MAIREPLUS_spectral_index.py
AniMAIRE/ui/: utils.py
notebooks_and_data_and_figures_for_paper/: plotting_modules.py
pytests/: test_anisotropic_MAIRE.py  test_anisotropic_MAIRE_magnetocosmics.py
