[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[project]
name = "AniMAIRE"
version = "1.5.3"
description = "Python library for running the anisotropic version of MAIRE+"
readme = "README.md"
license = { text = "CC By-NC-SA 4.0" }
authors = [
    { name = "Space Environment and Protection Group, University of Surrey" },
]
keywords = [
    "anisotropic",
    "MAIRE+",
    "atmospheric",
    "ionizing",
    "radiation",
    "dose",
    "rates",
    "cosmic",
    "rays",
    "ground",
    "level",
    "enhancements",
    "GLEs",
    "protons",
    "alpha",
    "particles",
    "neutrons",
    "effective",
    "ambient",
    "equivalent",
    "aircraft",
    "aviation",
    "Earth",
    "solar",
    "system",
    "sun",
    "space",
    "magnetic",
    "field",
]
dependencies = [
    # Upper bounds help prevent unexpected breaks from major/minor dependency upgrades.
    # CI validates integration after bumps; these bounds define the "safe" range.
    "numpy>=1.21.6,<3",
    "pandarallel>=1.6.3",
    "pandas>=1.3.5,<4",
    "ParticleRigidityCalculationTools>=1.5.4,<=1.5.18",
    "scipy>=1.7.3,<2",
    "spacepy>=0.3.0",
    "tqdm>=4.65.0",
    "plotly>=5.9.0",
    "numba>=0.57.1,<1",
    "metpy>=1.5.1",
    "CosRayModifiedISO>=1.2.9,<=1.2.11",
    "AsympDirsCalculator>=1.0.8,<=1.1.0",
    "seaborn>=0.13.2",
    "geopandas>=0.11.1,<2",
    "joblib>=1.2.0",
    "spaceweather>=0.2.4",
    "atmosphericRadiationDoseAndFlux>=1.0.3,<=1.0.15",
    "kpindex>=2.0.0",
    "ipywidgets>=8.1.5",
    "dask>=2022.0.0",
    "pyarrow>=12.0.0",
    # Matplotlib 3.10+ dropped Python 3.9 wheels; keep an upper bound for py39.
    "matplotlib>=3.10.1; python_version>='3.10'",
    "matplotlib>=3.9.0,<3.10; python_version<'3.10'",
    "cartopy>=0.22.0",
    "netCDF4>=1.7.2,<2",
    "imageio>=2.37.0",
    "psutil>=7.0.0,<8",
    "OTSO>=1.2.5,<=1.2.5",
    "geopy>=2.0.0",
    "pynverse>=0.1.4.6",
    "xgboost>=1.6.0,<4"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/ssc-maire/AniMAIRE-public"

[tool.hatch.build.targets.wheel]
packages = ["AniMAIRE"]
include = [
    "AniMAIRE/anisotropic_MAIRE_engine/data/*.csv",
    "AniMAIRE/anisotropic_MAIRE_engine/rigidityPredictor/data/*.pkl",
]

[tool.hatch.build.targets.sdist]
include = [
    "AniMAIRE/anisotropic_MAIRE_engine/data/*.csv",
    "AniMAIRE/anisotropic_MAIRE_engine/rigidityPredictor/data/*.pkl",
]
